# RAG-ACCELERATOR

./: .env  .gitignore  README.md  memory.md  pyproject.toml  railway.toml  test_qdrant_direct.py  test_rag_demo.py  test_week3_retrieval.py  tripti_singh__week3_submission.txt
artifacts/: human_eval_questions.json
capstone/: week2_submission_guidelines.md
venv2/: pyvenv.cfg
venv2/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
week-1/: .gitingestignore  submission.md  tripti_singh_week1_submission.txt  week1_prequalify.py
week-1/analysis/: data_quality_notes.md
week-1/data/: README.md
week-1/docs/: scoping.md
week-1/preprocessing_scripts/: analyze_corpus.py  classify_corpus.py.py  clean_stackexchange.py  copy_scripts.py  download_stackexchange.py  image_ocr_processor.py  preprocess_all.py  process_dataset.py  smart_convertor.py  split_mit.py  split_open_intro.py  visualize_dataset_story.py
week-1/scripts/: 01_setup_qdrant.py  02_create_pipeline.py  03_run_indexing.py  04_test_rag_system.py  05_interactive_rag.py  06_run_traces.py
week-1/traces/: trace.md  traces.json
week-2/: .gitingestignore  Design_Implementation_Details.md  Experimentation_Details.md  submission.md  week2_prequalify.py
week-2/archive/: Conceptual_building.md  Inference.md  Observations.md  README.md  human_eval_draft_20260301_203114.json  human_eval_final_20260301_200829.json  notes.md  (+6 more)
week-3/: .gitingestignore  submission.md  week3_prequalify.py
week-5/: .env.example  DEPLOY.md  README.md  docker-compose.yml
week2_chunking/: LLM_RATE_LIMITS.md  README.md
(+2091 files in other folders)
