[project]
name = "rag-workshop"
version = "0.1.0"
description = "RAG Workshop - Build production-grade RAG systems"
requires-python = ">=3.11"
dependencies = [
    # Core Haystack
    "haystack-ai>=2.16.1",
    # Haystack Integrations
    "qdrant-haystack>=9.2.0",
    "fastembed-haystack>=1.5.0",
    "google-genai-haystack>=2.1.1",
    # Embeddings
    "fastembed>=0.7.1",
    # LLM Providers
    "google-genai>=1.31.0",
    "openai>=1.99.9",
    # Utilities
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "mdit-plain>=1.0.1",
    "datasketch>=1.9.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "langchain-experimental>=0.4.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "nltk>=3.9.2",
    "sentence-transformers>=5.2.0",
    "ollama-haystack>=6.0.0",
    "streamlit>=1.53.1",
    "voyage-embedders-haystack>=1.8.0",
    "gitingest>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
